# beamformer-1bit-test

./: CMakeLists.txt  README.md  plot_bf.py
include/: bf_config.h
kernels/: gemm_kernel.cuh  packing_kernel.cuh
src/: bf.cu
